--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -11,9 +11,9 @@
 // @import "~bootstrap/scss/type";
 // @import "~bootstrap/scss/images";
 // @import "~bootstrap/scss/code";
-// @import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/grid";
 // @import "~bootstrap/scss/tables";
-// @import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/forms";
 // @import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/transitions";
 // @import "~bootstrap/scss/dropdown";
@@ -25,12 +25,12 @@
 // @import "~bootstrap/scss/card";
 // @import "~bootstrap/scss/breadcrumb";
 // @import "~bootstrap/scss/pagination";
-// @import "~bootstrap/scss/badge";
+@import "~bootstrap/scss/badge";
 // @import "~bootstrap/scss/jumbotron";
 // @import "~bootstrap/scss/alert";
 // @import "~bootstrap/scss/progress";
 // @import "~bootstrap/scss/media";
-// @import "~bootstrap/scss/list-group";
+@import "~bootstrap/scss/list-group";
 // @import "~bootstrap/scss/close";
 // @import "~bootstrap/scss/toasts";
 // @import "~bootstrap/scss/modal";
