--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -8,13 +8,13 @@
 // Optional
 // @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
-// @import "~bootstrap/scss/type";
+@import "~bootstrap/scss/type";
 // @import "~bootstrap/scss/images";
 // @import "~bootstrap/scss/code";
 @import "~bootstrap/scss/grid";
 // @import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
-// @import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/transitions";
 // @import "~bootstrap/scss/dropdown";
 // @import "~bootstrap/scss/button-group";
@@ -39,4 +39,8 @@
 // @import "~bootstrap/scss/carousel";
 // @import "~bootstrap/scss/spinners";
 // @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/utilities/flex";
+@import "~bootstrap/scss/utilities/display";
+@import "~bootstrap/scss/utilities/sizing";
+@import "~bootstrap/scss/utilities/position";
 // @import "~bootstrap/scss/print";
