--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -38,9 +38,9 @@
 }
 
 .user-picture {
-  border-radius: 16px;
+  border-radius: 25%;
   margin-right: 8px;
-  background-image: radial-gradient($user-picture-back 15px, transparent 16px);
+  background-image: radial-gradient($user-picture-back calc(50% - 1px), transparent 50%);
 }
 
 .user-name {
