Show dropdowns for user and channel

--- a/client/src/scss/colors.scss
+++ b/client/src/scss/colors.scss
@@ -37,3 +37,10 @@ $edit-hover-text: $white;
 
 $column-title-border: $black;
 $column-title-text: $white;
+
+$tooltip-back: $black;
+$tooltip-text: $white;
+
+$dropdown-back: $gray-900;
+$dropdown-text: $gray-300;
+$dropdown-item-hover-back: $gray-800;
