Fix no groups dialog

--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -11,7 +11,7 @@ $body-bg: $gray-800;
 // Optional
 // @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
-// @import "~bootstrap/scss/type";
+@import "~bootstrap/scss/type";
 // @import "~bootstrap/scss/images";
 // @import "~bootstrap/scss/code";
 // @import "~bootstrap/scss/grid";
